Added settings activity - need to actually implement stuff in ti thtough

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -90,6 +90,7 @@
                         android:textAllCaps="false" />
 
                     <Button
+                        android:id="@+id/button12"
                         android:layout_width="@dimen/main_button_width"
                         android:layout_height="@dimen/main_button_height"
                         android:textAllCaps="false" />
