--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="main_button_width">90dp</dimen>
     <dimen name="main_button_height">75dp</dimen>
+    <dimen name="add_physical_activity_textinput_height">40dp</dimen>
 </resources>
