--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="main_button_width">90dp</dimen>
     <dimen name="main_button_height">75dp</dimen>
     <dimen name="add_physical_activity_textinput_height">40dp</dimen>
+    <dimen name="popup_width">500dp</dimen>
+    <dimen name="popup_height">500dp</dimen>
 </resources>
