--- a/app/src/main/res/layout/content_physical_scheduler.xml
+++ b/app/src/main/res/layout/content_physical_scheduler.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".PhysicalSchedulerActivity"
+    tools:context=".activities.Activity_PhysicalActivityScheduler"
     tools:showIn="@layout/activity_physical_scheduler">
 
     <ListView
