--- a/app/src/main/res/layout/activity_physical_scheduler.xml
+++ b/app/src/main/res/layout/activity_physical_scheduler.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PhysicalSchedulerActivity">
+    tools:context=".activities.Activity_PhysicalActivityScheduler">
 
     <include layout="@layout/content_physical_scheduler" />
 
