--- a/app/src/main/res/layout/fragment_add_physical_activity_to_schedule.xml
+++ b/app/src/main/res/layout/fragment_add_physical_activity_to_schedule.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment_AddPhysicalActivityToSchedule">
+    tools:context=".fragments.Fragment_AddPhysicalActivityToSchedule">
 
     <!-- TODO: Update blank fragment layout -->
 
