--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -3,17 +3,17 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
-        android:fragment="app.collegeorganizer.SettingsActivity$GeneralPreferenceFragment"
+        android:fragment="app.collegeorganizer.activities.Activity_Settings$GeneralPreferenceFragment"
         android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/pref_header_general" />
 
     <header
-        android:fragment="app.collegeorganizer.SettingsActivity$NotificationPreferenceFragment"
+        android:fragment="app.collegeorganizer.activities.Activity_Settings$NotificationPreferenceFragment"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/pref_header_notifications" />
 
     <header
-        android:fragment="app.collegeorganizer.SettingsActivity$DataSyncPreferenceFragment"
+        android:fragment="app.collegeorganizer.activities.Activity_Settings$DataSyncPreferenceFragment"
         android:icon="@drawable/ic_sync_black_24dp"
         android:title="@string/pref_header_data_sync" />
 
