Made physical activity schedule items deleteable.

--- a/app/src/main/res/layout/fragment_add_edit_physical_activity.xml
+++ b/app/src/main/res/layout/fragment_add_edit_physical_activity.xml
@@ -167,6 +167,14 @@
             android:orientation="horizontal">
 
             <ImageButton
+                android:id="@+id/delete_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_delete"
+                android:visibility="gone" />
+
+            <ImageButton
                 android:id="@+id/cancel_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
