--- a/app/src/main/res/layout/activity_academic.xml
+++ b/app/src/main/res/layout/activity_academic.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".AcademicActivity">
+    tools:context=".activities.AcademicActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
