--- a/app/src/main/res/layout/fragment_academic.xml
+++ b/app/src/main/res/layout/fragment_academic.xml
@@ -5,6 +5,6 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AcademicActivity$PlaceholderFragment">
+    tools:context=".activities.AcademicActivity$PlaceholderFragment">
 
 </android.support.constraint.ConstraintLayout>
