--- a/app/src/main/res/layout/fragment_grade_recorder.xml
+++ b/app/src/main/res/layout/fragment_grade_recorder.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.Fragment_GradeRecorder">
+    tools:context=".fragments.GradeRecorder">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
