Added social scheduler.

--- a/app/src/main/res/layout/activity_social_scheduler.xml
+++ b/app/src/main/res/layout/activity_social_scheduler.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.Activity_PhysicalActivityScheduler">
+    tools:context=".activities.Activity_SocialScheduler">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,11 +24,11 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <include layout="@layout/content_physical_scheduler" />
+        <include layout="@layout/content_social_scheduler" />
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_physical_activity"
+        android:id="@+id/add_social_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
