--- a/app/src/main/res/layout/social_activity_list_item.xml
+++ b/app/src/main/res/layout/social_activity_list_item.xml
@@ -23,7 +23,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/list_item_intensity"
+            android:id="@+id/list_item_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".33"
